--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="shadow">
         <div class="container header">
           <nav class="navigation">
             <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
@@ -35,7 +35,7 @@
                 <a class="header-navigation" href="./index.html">Studio</a>
               </li>
               <li class="header-item">
-                <a class="header-navigation" href="./portfolio.html"
+                <a class="header-navigation active" href="./portfolio.html"
                   >Portfolio</a
                 >
               </li class="header-item">
@@ -74,109 +74,189 @@
         </div>
       </section>
       <section class="items">
-        <div class="container">
+        <div class="container ">
           <ul class="items-list">
-            <li>
-              <img
-                src="./images/portfolio1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Banking App Interface Concept</h3>
-              <p class="items-text">App</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Banking App Interface Concept</h3>
+                <p class="items-text">App</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Cashless Payment</h3>
-              <p class="items-text">Marketing</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Cashless Payment</h3>
+                <p class="items-text">Marketing</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Meditation App</h3>
-              <p class="items-text">App</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Meditation App</h3>
+                <p class="items-text">App</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Taxi Service</h3>
-              <p class="items-text">Marketing</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Taxi Service</h3>
+                <p class="items-text">Marketing</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Screen Illustrations</h3>
-              <p class="items-text">Design</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Screen Illustrations</h3>
+                <p class="items-text">Design</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Online Courses</h3>
-              <p class="items-text">Marketing</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Online Courses</h3>
+                <p class="items-text">Marketing</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Instagram Stories Concept</h3>
-              <p class="items-text">Design</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Instagram Stories Concept</h3>
+                <p class="items-text">Design</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio8.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Organic Food</h3>
-              <p class="items-text">Web Site</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Organic Food</h3>
+                <p class="items-text">Web Site</p>
+              </a>
             </li>
-            <li>
-              <img
-                src="./images/portfolio9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h3 class="items-title">Fresh Coffee</h3>
-              <p class="items-text">Web Site</p>
+            <li class="items-content">
+              <a href="" class="items-link">
+                <div class="items-img">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+                <h3 class="items-title">Fresh Coffee</h3>
+                <p class="items-text">Web Site</p>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-        <div class="container">
-        <p class="footer-logo"><span>Web</span>Studio</p>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="container footer-list">
+        <div class="footer-logo-text">
+          <p class="footer-logo"><span>Web</span>Studio</p>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-list-icon">
+                  <li>
+                    <a href="" class="footer-icon">
+                      <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="footer-icon">
+                      <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="footer-icon">
+                      <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="footer-icon">
+                      <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+        </div>
         </div>
       </footer>
   </body>
