--- a/index.html
+++ b/index.html
@@ -429,16 +429,77 @@
                   </li>
                 </ul>
         </div>
+        <div class="footer-form-wrap">
+          <p class="footer-social-text footer-form-text">Subscribe</p>
+          <form class="footer-form">
+            <label for="">
+              <input type="email" class="footer-input" name="email-footer" placeholder="E-mail" />
+            </label>
+            <button type="submit" class="footer-form-btn">Subscribe 
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
         </div>
       </footer>
     </div>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg width="8" height="8" class="close-btn-icon">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-title">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form">
+          <div class="modal-class">
+            <label for="name">Name</label>
+            <div class="modal-input-icon">
+              <input type="text" class="modal-input" name="user-name" id="name" />
+            <svg class="modal-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-person-black">
+            </svg>
+            </div>
+          </div>
+          <div class="modal-class">
+            <label for="phone">Phone</label>
+            <div class="modal-input-icon">
+              <input type="tel" class="modal-input" name="user-phone" id="phone" />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black">
+              </svg>
+            </div>
+          </div>
+          <div class="modal-class">
+            <label for="email">Email</label>
+            <div class="modal-input-icon">
+              <input type="email" class="modal-input" name="user-email" id="email" />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black">
+              </svg>
+            </div>
+          </div>
+            <div class="modal-text-area">
+              <label for="user-comment">Comment</label>
+              <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-comment"></textarea>
+            </div>
+          <div class="modal-check">
+            <input type="checkbox" name="privacy" id="privacy" class="modal-checkbox visually-hidden" value="true">
+            <label for="privacy" class="modal-check-text">
+              <span>
+                <svg class="modal-check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the  <a href="" class="modal-check-link"> Privacy Policy</a></label>
+          </div>
+
+          <button type="submit" class="form-btn">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
