--- a/portfolio.html
+++ b/portfolio.html
@@ -216,48 +216,61 @@
       </section>
     </main>
     <footer class="footer">
-        <div class="container footer-list">
-        <div class="footer-logo-text">
-          <p class="footer-logo"><span>Web</span>Studio</p>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-social">
-          <p class="footer-social-text">Social media</p>
-          <ul class="footer-list-icon">
-                  <li>
-                    <a href="" class="footer-icon">
-                      <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="" class="footer-icon">
-                      <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="" class="footer-icon">
-                      <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="" class="footer-icon">
-                      <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-        </div>
-        </div>
-      </footer>
+      <div class="container footer-list">
+      <div class="footer-logo-text">
+        <p class="footer-logo"><span>Web</span>Studio</p>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+      <div class="footer-social">
+        <p class="footer-social-text">Social media</p>
+        <ul class="footer-list-icon">
+                <li>
+                  <a href="" class="footer-icon">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="footer-icon">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="footer-icon">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="footer-icon">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+      </div>
+      <div class="footer-form-wrap">
+        <p class="footer-social-text footer-form-text">Subscribe</p>
+        <form class="footer-form">
+          <label for="">
+            <input type="email" class="footer-input" name="email-footer" placeholder="E-mail" />
+          </label>
+          <button type="submit" class="footer-form-btn">Subscribe 
+            <svg width="24" height="24">
+              <use href="./images/icons.svg#icon-Frame"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
+      </div>
+    </footer>
   </body>
 </html>
