--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
-    <header class="shadow">
+    <!-- <header class="shadow">
         <div class="container header">
           <nav class="navigation">
             <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
@@ -57,7 +58,7 @@
             </ul>
           </address>
         </div>
-      </header>
+      </header> -->
     <main>
       <section class="button">
         <div class="container">
@@ -74,7 +75,7 @@
         </div>
       </section>
       <section class="items">
-        <div class="container ">
+        <div class="container">
           <ul class="items-list">
             <li class="items-content">
               <a href="" class="items-link">
@@ -82,8 +83,7 @@
                   <img
                     src="./images/portfolio1.jpg"
                     alt="Banking App Interface Concept"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -97,8 +97,7 @@
                   <img
                     src="./images/portfolio2.jpg"
                     alt="Cashless Payment"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -112,8 +111,7 @@
                   <img
                     src="./images/portfolio3.jpg"
                     alt="Meditation App"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -127,8 +125,7 @@
                   <img
                     src="./images/portfolio4.jpg"
                     alt="Taxi Service"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -142,8 +139,7 @@
                   <img
                     src="./images/portfolio5.jpg"
                     alt="Screen Illustrations"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -157,8 +153,7 @@
                   <img
                     src="./images/portfolio6.jpg"
                     alt="Online Courses"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -172,8 +167,7 @@
                   <img
                     src="./images/portfolio7.jpg"
                     alt="Instagram Stories Concept"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -187,8 +181,7 @@
                   <img
                     src="./images/portfolio8.jpg"
                     alt="Organic Food"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -202,8 +195,7 @@
                   <img
                     src="./images/portfolio9.jpg"
                     alt="Fresh Coffee"
-                    width="360"
-                    height="300"
+                    class="items-img-img"
                   />
                   <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
