goit-markup-hw-6.1

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           </div>
         </section>
       </main>
-      <!-- <footer class="footer">
+      <footer class="footer">
         <div class="container footer-list">
         <div class="footer-logo-text">
           <p class="footer-logo"><span>Web</span>Studio</p>
@@ -429,7 +429,7 @@
           </form>
         </div>
         </div>
-      </footer> -->
+      </footer>
     </div>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
