goit-markup-hw-6.3

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
-      <!-- <header class="shadow">
+      <header class="shadow">
         <div class="container header">
           <nav class="navigation">
             <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
@@ -58,7 +58,7 @@
             </ul>
           </address>
         </div>
-      </header> -->
+      </header>
       <main>
         <!-- <section class="title">
           <div class="container">
